--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,12 +1,12 @@
 [CLUSTER]
-HOST='dwhcluster.caejw6zsbwyw.us-west-2.redshift.amazonaws.com'
+HOST='dwhcluster.abcdefghij.us-someplace-2.redshift.amazonaws.com'
 DB_NAME=dwh
 DB_USER=dwhuser
 DB_PASSWORD=Passw0rd
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN='arn:aws:iam::237696921313:role/dwhRole'
+ARN='arn:aws:iam::somenumber:role/nameoftherole'
 
 [S3]
 LOG_DATA='s3://udacity-dend/log_data'
