--- a/dwh.cfg
+++ b/dwh.cfg
@@ -14,4 +14,4 @@ LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
 SONG_DATA='s3://udacity-dend/song_data'
 
 [LOC]
-REGION='us-west-2'
+REGION='us-someplace-2'
